variadics/tests/compile-fail-nightly/var_type_spread_badtype.stderr
error[E0277]: the trait bound `f64: VariadicExt` is not satisfied
 --> tests/compile-fail-nightly/var_type_spread_badtype.rs:5:17
  |
5 |     fn check(_: List) {}
  |                 ^^^^ the trait `VariadicExt` is not implemented for `f64`
  |
help: the following other types implement trait `VariadicExt`
 --> src/lib.rs
  |
  | / impl<Item, Rest> VariadicExt for (Item, Rest)
  | | where
  | |     Rest: VariadicExt,
  | |______________________^ `(Item, Rest)`
...
  |   impl VariadicExt for () {
  |   ^^^^^^^^^^^^^^^^^^^^^^^ `()`
